# chudbot

./: .gitignore  .tarpaulin.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml.example  dev.sh  serve.sh
crates/chudbot-anthropic/: Cargo.toml
crates/chudbot-anthropic/src/: lib.rs  llm.rs  pricing.rs
crates/chudbot-api/: Cargo.toml
crates/chudbot-api/src/: agent.rs  collector.rs  events.rs  ids.rs  lib.rs  llm.rs  platform.rs  reasoning.rs  registries.rs  retry.rs  sse.rs  storage.rs  tool.rs  transcript.rs  usage.rs
crates/chudbot-api/src/media/: generation.rs  mod.rs  reference.rs  store.rs  tool.rs
crates/chudbot-asset-local/: Cargo.toml
crates/chudbot-asset-local/src/: lib.rs
crates/chudbot-asset-s3/: Cargo.toml
crates/chudbot-asset-s3/src/: lib.rs
crates/chudbot-bin/: Cargo.toml  build.rs
crates/chudbot-bin/src/: config.rs  diagnostics.rs  errors.rs  main.rs  platforms.rs  runtime.rs  services.rs
crates/chudbot-bot/: Cargo.toml
crates/chudbot-bot/src/: action.rs  agents.rs  avatars.rs  commands.rs  config.rs  constants.rs  error.rs  guilds.rs  lib.rs  media.rs  memory.rs  platform.rs  prelude.rs  registries.rs  runtime.rs  tests.rs  transcript.rs  turns.rs
crates/chudbot-bot/src/agents/: conversation.rs  mod.rs  system.rs  title.rs  tos.rs
crates/chudbot-bot/src/memory/: compact.rs  config.rs  diary.rs  mod.rs  runtime.rs
crates/chudbot-bot/src/tools/: audio_transcription.rs  executor.rs  fetch_messages.rs  image_generation.rs  media_access.rs  memory.rs  mod.rs  reaction.rs  shared.rs  status.rs  usage_report.rs  video_generation.rs
crates/chudbot-discord/: Cargo.toml
crates/chudbot-discord/src/: lib.rs
crates/chudbot-gemini/: Cargo.toml
crates/chudbot-gemini/src/: image.rs  lib.rs  llm.rs  video.rs
crates/chudbot-openai/: Cargo.toml
crates/chudbot-openai-compat/: Cargo.toml
crates/chudbot-openai-compat/src/: lib.rs  llm.rs
crates/chudbot-openai/src/: image.rs  lib.rs  llm.rs  pricing.rs
crates/chudbot-storage-sqlx/: Cargo.toml  build.rs
crates/chudbot-storage-sqlx/src/: lib.rs
crates/chudbot-web/: Cargo.toml
crates/chudbot-web/src/: api.rs  events.rs  lib.rs  media.rs  middleware.rs  server.rs  spa.rs  static_files.rs
crates/chudbot-xai/: Cargo.toml
crates/chudbot-xai/src/: audio.rs  imagine.rs  lib.rs  llm.rs
crates/grok-discord-bot-bin/: Cargo.toml  build.rs
crates/grok-discord-bot-bin/src/: app.rs  avatars.rs  bot.rs  commands.rs  main.rs  titles.rs  web.rs
crates/grok-discord-bot-core/: Cargo.toml
crates/grok-discord-bot-core/src/: agent.rs  config.rs  db.rs  domain.rs  grok.rs  imagegen.rs  lib.rs  llm.rs  retry.rs  storage.rs  videogen.rs
crates/grok-discord-bot-core/src/imagegen/: mod.rs  openai.rs  xai.rs
crates/grok-discord-bot-core/src/llm/: anthropic.rs  mock.rs  openai.rs  openai_compat.rs  xai.rs
crates/grok-discord-bot-core/src/videogen/: mod.rs  xai.rs
docs/: 2.0-api-shapes.md  debug-tui-implementation-plan.md  global-concept-memory-implementation-plan.md  plan-streaming-agents.md  platform-boundary-refactor-plan.md  rust-style.md  user-memory-implementation-handoff.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  store.ts  title.ts  types.ts  users.ts
frontend/src/components/: Avatar.tsx  ConversationView.tsx  Landing.tsx  RelativeTime.tsx  ToolCall.tsx  Turn.tsx  UsageSummary.tsx
frontend/src/styles/: main.scss
migrations/: 0001_init.sql  0002_privacy.sql  0003_guild_settings.sql  0004_video_jobs.sql  0005_personas.sql  0006_users_and_titles.sql  0007_turn_system_prompts.sql  0008_app_versions.sql  0009_turn_provider_state.sql  0010_admin_stop.sql  0011_chudbot_v2_schema.sql  0012_user_memory.sql  0013_memory_diary_turn_index.sql  0014_memory_compact_backfill_indexes.sql  0015_memory_compact_usage.sql  0016_user_memory_usage_costs_view.sql  0017_collapse_user_memory_documents.sql  0018_video_generation_rate_limit_indexes.sql  0019_video_generation_scope_rate_limit_index.sql  0020_video_generation_active_rate_limit_index.sql  0021_turn_attempt_model_steps.sql  0022_drop_legacy_turn_continuations.sql  0023_backfill_configured_llm_provider_names.sql  0024_guild_icon_cache.sql  0025_canonical_media_uri_scheme.sql  0026_drop_privacy_tables.sql
