[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chud"]

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
test-case = "3"
serde_json = "1"
toml = "0.9"
base64 = "0.22"

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util"]

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "rustls", "http2"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[workspace.dependencies.time]
version = "0.3"
features = ["serde", "macros", "formatting", "parsing"]

[workspace.dependencies.sqlx]
version = "0.9"
default-features = false
features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "time", "macros", "migrate", "derive"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.distribute]
inherits = "release"
strip = "symbols"
