[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chud"]
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
async-trait = "0.1"
async-stream = "0.3"
bitflags = "2"
thiserror = "2"
tracing = "0.1"
test-case = "3"
serde_json = { version = "1", features = ["arbitrary_precision", "raw_value"] }
toml = "0.9"
base64 = "0.22"
futures = "0.3"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

[workspace.dependencies.unicode-properties]
version = "0.1"
default-features = false
features = ["emoji"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "fs", "io-util"]

[workspace.dependencies.tokio-util]
version = "0.7"
features = ["rt"]

[workspace.dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "rustls", "http2", "multipart", "stream"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[workspace.dependencies.time]
version = "0.3"
# `serde-well-known` gives us `time::serde::rfc3339`, which we use to
# serialize OffsetDateTime as ISO-8601 strings the JS `Date` parser
# understands. Without it, the default serde repr is a 9-element int
# array ([year, ordinal, hour, …]) that `new Date(...)` reads as NaN.
features = ["serde", "serde-well-known", "macros", "formatting", "parsing"]

[workspace.dependencies.sqlx]
version = "0.9"
default-features = false
features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "time", "macros", "migrate", "derive"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[profile.distribute]
inherits = "release"
strip = "symbols"
