[package]
name = "chudbot-anthropic"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chudbot-api = { path = "../chudbot-api" }
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
