[package]
name = "chudbot-asset-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chudbot-api = { path = "../chudbot-api" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
