[package]
name = "chudbot-asset-s3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
chudbot-api = { path = "../chudbot-api" }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
