[package]
name = "chudbot-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chudbot-api = { path = "../chudbot-api" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
test-case.workspace = true
