[package]
name = "chudbot-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
chudbot-api = { path = "../chudbot-api" }
dashmap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
unicode-properties.workspace = true

[dev-dependencies]
async-trait.workspace = true
test-case.workspace = true
