[package]
name = "chudbot-discord"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chudbot-api = { path = "../chudbot-api" }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.twilight-gateway]
version = "0.17"

[dependencies.twilight-http]
version = "0.17"

[dependencies.twilight-model]
version = "0.17"

[dependencies.twilight-util]
version = "0.17"
features = ["builder"]
