[package]
name = "chudbot-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chudbot-api = { path = "../chudbot-api" }
bytes = "1"
futures.workspace = true
http-body = "1"
mime_guess = "2"
moka = { version = "0.12", features = ["future"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.axum]
version = "0.8"

[dependencies.tower-http]
version = "0.6"
features = ["fs", "set-header"]

[dev-dependencies]
test-case.workspace = true
time.workspace = true
