[package]
name = "grok-discord-bot-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
grok-discord-bot-core = { path = "../grok-discord-bot-core" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.poise]
version = "0.6"

[dependencies.axum]
version = "0.8"

[dependencies.maud]
version = "0.27"
features = ["axum"]

[dev-dependencies]
test-case.workspace = true
