[package]
name = "grok-discord-bot-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
grok-discord-bot-core = { path = "../grok-discord-bot-core" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.twilight-gateway]
version = "0.17"

[dependencies.twilight-http]
version = "0.17"

[dependencies.twilight-model]
version = "0.17"

[dependencies.twilight-cache-inmemory]
version = "0.17"

[dependencies.twilight-mention]
version = "0.17"

[dependencies.twilight-util]
version = "0.17"
features = ["builder"]

[dependencies.axum]
version = "0.8"

[dependencies.maud]
version = "0.27"
features = ["axum"]

[dev-dependencies]
test-case.workspace = true
