[package]
name = "grok-discord-bot-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
grok-discord-bot-core = { path = "../grok-discord-bot-core" }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.twilight-gateway]
version = "0.17"

[dependencies.twilight-http]
version = "0.17"

[dependencies.twilight-model]
version = "0.17"

[dependencies.twilight-cache-inmemory]
version = "0.17"

[dependencies.twilight-mention]
version = "0.17"

[dependencies.twilight-util]
version = "0.17"
features = ["builder"]

[dependencies.axum]
version = "0.8"

[dependencies.tower-http]
version = "0.6"
# We deliberately do NOT enable compression-* features. Cloudflare in
# front of the tunnel compresses on the way to clients with full
# negotiation (brotli when supported, gzip otherwise), and it's
# wasteful to do that work twice. Our Cache-Control values are also
# carefully kept free of `no-transform` so the CDN is allowed to
# compress / minify as it sees fit.
features = ["fs", "set-header"]

[dependencies.tower]
version = "0.5"

[dependencies.reqwest]
workspace = true

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["aws_lc_rs", "tls12", "logging", "std"]

[dev-dependencies]
test-case.workspace = true
