[package]
name = "grok-discord-bot-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
toml.workspace = true
base64.workspace = true

[dev-dependencies]
test-case.workspace = true
